--- a/0x04-typescript/task_4/tsconfig.json
+++ b/0x04-typescript/task_4/tsconfig.json
@@ -1,12 +1,11 @@
 {
   "compilerOptions": {
-    "outDir": "../0x04-typescript/task_0/dist",
-    "sourceMap": true,
-    "noImplicitAny": true,
-    "module": "es6",
-    "target": "es5",
-    "allowJs": true,
-    "moduleResolution": "node",
-        "skipLibCheck": true
-  }
+    "target": "es6",
+    "module": "commonjs",
+    "strict": true,
+    "esModuleInterop": true,
+    "outDir": "./build",
+    "rootDir": "./js"
+  },
+  "include": ["./js/**/*"]
 }
